# Tokenboard

./: .gitignore  README.md  azure-pipelines.yml
.github/workflows/: release.yml
app/: package-lock.json  package.json
app/src/: index.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
app/src-tauri/src/core/: analyzer.rs  mod.rs  model.rs
app/src-tauri/src/ingest/: cli_logs.rs  copilot.rs  mod.rs  probe.rs
