[package]
name = "tokenboard"
version = "1.0.0"
edition = "2021"
description = "GitHub Copilot token usage analytics for Windows"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 2
